Removing client secret

--- a/Microsoft.SCIM.WebHostSample/appsettings.json
+++ b/Microsoft.SCIM.WebHostSample/appsettings.json
@@ -18,7 +18,7 @@
     "ClientId": "4372d0a2-d9cd-46b1-b8dd-89d42a7a302c",
     "CallbackPath": "/signin-oidc",
     "Scopes": "access_as_user",
-    "ClientSecret": "rCO8Q~RqB2MB2kKUgC24SvKkRfj6uWcoXlQGddu1",
+    "ClientSecret": "",
     "ClientCertificates": []
   },
   "MicrosoftGraph": {
